--- a/Linear_Regression_climate_change.ipynb
+++ b/Linear_Regression_climate_change.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Linear Regression VAC Project\n",
-    "- Harshit Kandhwey (RA1911026020001)"
+    "- by Harshit Kandhwey (RA1911026020001)"
    ]
   },
   {
